added three sections which entails project ,skill and contacts

--- a/portifolio.html
+++ b/portifolio.html
@@ -6,6 +6,33 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>My Portfolio</h1>
+    <p>Welcome to my portfolio page. Here you will find information about my projects and skills.</p>
+    
+    <section>
+        <h2>Projects</h2>
+        <ul>
+            <li>Project 1: Description of project 1.</li>
+            <li>Project 2: Description of project 2.</li>
+            <li>Project 3: Description of project 3.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Skills</h2>
+        <p>I have experience in the following areas:</p>
+        <ul>
+            <li>Web Development</li>
+            <li>Data Analysis</li>
+            <li>Machine Learning</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Contact</h2>
+        <p>If you would like to get in touch, please email me at <a href="mailto: ramzeynoah11@gmail.com">Email</a></p>  
+        </a> or connect with me on <a href="https://www.linkedin.com/in/yourprofile">LinkedIn</a>.</p>
+        <p>Feel free to reach out for collaborations or inquiries.</p>
+    </section>
     
 </body>
 </html>
