--- a/portifolio.html
+++ b/portifolio.html
@@ -8,11 +8,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <title>PORTIFOLIO
-        
+
     </title>
 </head>
 <body>
-    <h1>My Portfolio</h1>
+    <h1>NOAH EWALAN| DATA SCIENCE PORTIFOLIO</h1>
     <p>Welcome to my portfolio page. Here you will find information about my projects and skills.</p>
     
     <section>
