added real project

--- a/portifolio.html
+++ b/portifolio.html
@@ -7,9 +7,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <title>PORTIFOLIO
-
-    </title>
+    <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="Noah Ewalans Data Science Portfolio showcasing projects and skills in web development, data analysis, and machine learning.">
+    <title>PORTIFOLIO</title>
 </head>
 <body>
     <h1>NOAH EWALAN| DATA SCIENCE PORTIFOLIO</h1>
@@ -18,9 +18,10 @@
     <section>
         <h2>Projects</h2>
         <ul>
-            <li>Project 1: Description of project 1.</li>
-            <li>Project 2: Description of project 2.</li>
-            <li>Project 3: Description of project 3.</li>
+            <li>
+            <strong> <a href="https://github.com/ramnoa/Global-data-dashboard">Global Data Dashboard</a></strong>: A comprehensive dashboard that visualizes global data trends and insights.</li>
+           <li><strong> <a href="https://github.com/ramnoa/airline-meal-preference-model">airline-meal-preference-model</a></strong>:This project is designed to simulate a realistic airline data science use case, helping stakeholders understand customer behavior and improve service personalization.</li>
+        
         </ul>
     </section>
 
