--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 
     <title>PORTIFOLIO</title>
 </head>
@@ -36,8 +36,9 @@
     </section>
     <section>
         <h2>Contact</h2>
-        <p>If you would like to get in touch, please email me at <a href="mailto: ramzeynoah11@gmail.com">Email</a></p>  
-        </a> or connect with me on <a href="https://www.linkedin.com/in/yourprofile">LinkedIn</a>.</p>
+        <p>If you would like to get in touch, please email me at 
+        <a href="mailto: ramzeynoah11@gmail.com">Email</a>  or connect with me on
+        <a href="https://www.linkedin.com/in/yourprofile">LinkedIn</a>.</p>
         <p>Feel free to reach out for collaborations or inquiries.</p>
     </section>
     
