added certification section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
         </ul>
     </section>
     <section>
+       <h2>Certification</h2>
+        <p>I have completed several certifications to enhance my skills:</p>
+          <ul>
+              <li>Data Science Professional Certificate from IBM</li>
+              <li>Python for Data Science and AI from IBM</li>
+              <li>Machine Learning with Python from IBM</li>
+          </ul>
+    </section>
+    <section>
   <h2>Contact</h2>
   <p>If you would like to get in touch, please email me or connect on social media:</p>
   <div class="social-icons">
