--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
         <div class="progress"><div class="bar" style="width: 70%;"></div></div>
       </div>
       <div class="skill">
+        <p>Tableau</p>
+        <div class="progress"><div class="bar" style="width: 74%;"></div></div>
+      </div>
+      <div class="skill">
         <p>Canva</p>
         <div class="progress"><div class="bar" style="width: 75%;"></div></div>
       </div>
