--- a/index.html
+++ b/index.html
@@ -104,7 +104,11 @@
     <p>Email: <a href="mailto:ramzeynoah11@gmail.com">ramzeynoah11@gmail.com</a></p>
     <p>Professional Email: <a href="mailto:ramzeydigitalservices@gmail.com">ramzeydigitalservices@gmail.com</a></p>
     <p>Phone: <a href="tel:+254719531290">+254 719 531 290</a></p>
-
+    <div>
+      <a href="https://www.linkedin.com/in/noah-logong-053168348" target="_blank">
+        <img src="images/linkedin-icon.png" alt="LinkedIn" style="width:24px; vertical-align:middle;">
+        LinkedIn Profile
+      </a>
     <form id="contactForm">
       <input type="text" id="name" placeholder="Your Name" required>
       <input type="email" id="email" placeholder="Your Email" required>
