--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <p>Phone: <a href="tel:+254719531290">+254 719 531 290</a></p>
     <div>
       <a href="https://www.linkedin.com/in/noah-logong-053168348" target="_blank">
-        <img src="images/linkedin-icon.png" alt="LinkedIn" style="width:24px; vertical-align:middle;">
+        <img src="linkedin.png" alt="LinkedIn" style="width:24px; vertical-align:middle;">
         LinkedIn Profile
       </a>
     <form id="contactForm">
