--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h1>Noah Ewalan Logong</h1>
     <h2>Computer Science Student | Data Science & AI Enthusiast</h2>
     <p>Passionate about leveraging technology, digital marketing, and AI to build impactful solutions.</p>
-    <a href="noah.docx" class="btn" download>Download CV</a>
+    <a href="noah .pdf" class="btn" download>Download CV</a>
     <a href="#projects" class="btn secondary">View Projects</a>
   </section>
 
