--- a/index.html
+++ b/index.html
@@ -1009,26 +1009,7 @@
             position: relative; /* added so overlay icon can be positioned */
         }
 
-        /* small project icon overlay inside portfolio item */
-        .project-icon {
-            position: absolute;
-            left: 10px;
-            bottom: 10px;
-            width: 48px;
-            height: 48px;
-            background: rgba(255,255,255,0.95);
-            border-radius: 8px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.12);
-        }
-
-        .project-icon svg {
-            width: 28px;
-            height: 28px;
-        }
-
+    
     </style>
 </head>
 <body>
@@ -1207,23 +1188,7 @@
                        <!-- Undernourishment Predictor — SDG 2 -->
                     <div class="portfolio-item">
                         <div class="portfolio-item-image">
-                            <img src="https://share.google/images/xAMUGv3ByyMCzOeov"
-                                 alt="Undernourishment Predictor thumbnail"
-                                 >
-                            <div class="project-icon" aria-hidden="true" title="Undernourishment Predictor">
-                                <!-- inline SVG: leaf + bar chart -->
-                                <svg viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Undernourishment Predictor icon">
-                                    <rect width="64" height="64" rx="8" fill="none"/>
-                                    <g transform="translate(4,4)" fill="none" stroke="none">
-                                        <!-- leaf -->
-                                        <path d="M18 6c-6 0-12 6-15 12 9 0 15 6 15 12 6-9 9-21 0-24z" fill="#2aa98a"/>
-                                        <!-- bars -->
-                                        <rect x="36" y="28" width="6" height="12" fill="#0067c0"/>
-                                        <rect x="28" y="22" width="6" height="18" fill="#007acc"/>
-                                        <rect x="20" y="16" width="6" height="24" fill="#0096d6"/>
-                                    </g>
-                                </svg>
-                             </div>
+                            <img src="download.jpg" alt="Undernourishment Predictor Preview" />
                         </div>
                         <div class="portfolio-item-info">
                             <div class="portfolio-item-title">Undernourishment Predictor — SDG 2</div>
@@ -1279,7 +1244,7 @@
                     <div class="contact-info">
                         <div class="contact-item">
                             <div class="contact-item-icon">✉️</div>
-                            <span>Ramzeynoah@gmail.com</span>
+                            <span>Ramzeynoah11@gmail.com</span>
                         </div>
                         <div class="contact-item">
                             <div class="contact-item-icon">📱</div>
